crates/turborepo/tests/snapshots/query__turbo_trace_get_`invalid.ts`_with_dependencies_(npm@10.5.0).snap
---
source: crates/turborepo/tests/query.rs
expression: query_output
---
{
  "data": {
    "file": {
      "path": "invalid.ts",
      "dependencies": {
        "files": {
          "items": [
            {
              "path": "button.css"
            },
            {
              "path": "button.json"
            },
            {
              "path": "button.tsx"
            }
          ]
        },
        "errors": {
          "items": [
            {
              "message": "failed to resolve import to `./non-existent-file.js`"
            }
          ]
        }
      }
    }
  }
}
