crates/turborepo/tests/snapshots/query__turbo_trace_get_`link.tsx`_with_type_dependents_(npm@10.5.0).snap
---
source: crates/turborepo/tests/query.rs
expression: query_output
---
{
  "data": {
    "file": {
      "path": "link.tsx",
      "dependents": {
        "files": {
          "items": [
            {
              "path": "import_just_type.ts"
            }
          ]
        }
      }
    }
  }
}
