crates/turborepo/tests/snapshots/query__turbo_trace_get_`main.ts`_(npm@10.5.0).snap
---
source: crates/turborepo/tests/query.rs
expression: query_output
---
{
  "data": {
    "file": {
      "path": "main.ts"
    }
  }
}
