crates/turborepo/tests/snapshots/query__turbo_trace_get_`main.ts`_with_ast_(npm@10.5.0)_err.snap
---
source: crates/turborepo/tests/query.rs
expression: stderr
---
 WARNING  No locally installed `turbo` found. Using version: 2.2.4-canary.0.
turbo 2.2.4-canary.0

 WARNING  query command is experimental and may change in the future
