crates/turborepo/tests/snapshots/query__turbo_trace_get_`main.ts`_with_dependencies_(npm@10.5.0).snap
---
source: crates/turborepo/tests/query.rs
expression: query_output
---
{
  "data": {
    "file": {
      "path": "main.ts",
      "dependencies": {
        "files": {
          "items": [
            {
              "path": "bar.js"
            },
            {
              "path": "button.tsx"
            },
            {
              "path": "foo.js"
            },
            {
              "path": "node_modules/repeat-string/index.js"
            }
          ]
        }
      }
    }
  }
}
